--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 html {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 body {
@@ -8,52 +9,56 @@ body {
 }
 
 #home {
-    width: 100%;
-    height: 1010px;
-    background: url("../img/Sections background/section-1(header).jpg") no-repeat fixed center;
-    opacity: 0.75;
+  width: 100%;
+  height: 1010px;
+  background-size: cover;
+  background: rgba(255, 255, 255, 0.2) url("../img/Sections background/section-1(header).jpg") no-repeat fixed top;
+  background-blend-mode: lighten;
+}
+
+.nav-bg {
+  background-color: rgba(0, 0, 0, 0.25);
+  background-size: cover;
 }
 
 .nav-container {
+  display: flex; 
+  width: 1140px; 
   height: 120px;
-  display: flex;
-  justify-content: center;
-	background-color: rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
+  justify-content: space-between;
 }
 
 .logo {
-    display: flex;
-  align-items: center;
-
+  display: flex;
 }
 
 .logo-text {
-	display: flex;
 	margin-left: 8px; 
-	font-size: 1.8rem;
+	font-size: 2rem;
 	font-weight: 400;
-	color: 	white;	
+	color: white;	
 }
 
-.logo-text:after {
+.logo-text::after {
 	content: 	'Ham';
 	font-weight: 700;
 	color: 	#18cfab;
 }
 
 .img-logo {
-    display: flex;
-    width: 58px;
-    height: 67px;
-    font-size: 2.5rem;
-    color: white;
-    font-weight: 700;
-    text-transform: uppercase;
-    background-image: url("../img/img-logo-bg.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  width: 58px;
+  height: 67px;
+  font-size: 2.5rem;
+  color: white;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: url("../img/img-logo-bg.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo-link {
@@ -62,27 +67,25 @@ body {
 }
 
 .nav-menu-list {
-	margin: 0;
-	margin-left: 210px;
-    display: flex;
-  align-items: center;
+  margin: 0;
+  display: flex;
 }
 
 .nav-menu-item {
   display: flex;
-  margin: 0 10px;
+  margin: 0 15px;
   font-weight: 700;
-  font-size: 0.8rem;
+  font-size: 0.81rem;
   text-transform: uppercase;
   height: 100%;
 }
 
 .nav-menu-item:last-child {
-    font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
 .nav-menu-link {
-	display: flex;
+  display: flex;
   align-items: center;
   text-decoration: none;
   color: #9d9c9b;
@@ -96,19 +99,15 @@ body {
 }
 
 .header-container {
-	position: relative;
-	top: calc(50vh - 280px);
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	opacity: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 210px;
 }
 
 .header-text {
-	margin-top: 0;
-  margin-bottom: 45px;
-  font-size: 2.2rem;
+  margin-bottom: 20px;
+  font-size: 2.1rem;
   font-weight: 700;
   color: white;
   text-transform: uppercase;
@@ -116,8 +115,8 @@ body {
 
 .header-text-big {
 	margin-top: 0;
-  margin-bottom: 36px;
-  font-size: 4.3rem;
+  margin-bottom: 20px;
+  font-size: 4.8rem;
   font-weight: 700;
   color: white;
   text-transform: uppercase;
@@ -126,7 +125,7 @@ body {
 .header-text-small {
 	margin-top: 0;
   margin-bottom: 128px;
-  font-size: 1.9rem;
+  font-size: 2.1rem;
   color: #d4d4d4;
 	font-weight: 300;
 }
@@ -138,66 +137,180 @@ body {
   display: flex;
 }
 
-.subscribe-btn, .articles-btn {
+.explore-btn, .purchase-btn {
   display: block;
   box-sizing: border-box;
   padding: 23px;
   margin: 14px;
   min-width: 166px;
-  font-size: 0.8rem;
+  font-size: 0.81rem;
   color: white;
   border-radius: 5px;
   border-top: 4px solid white;
   text-align: center;
   text-transform: uppercase;
   background-color: #18cfab;
+  cursor: pointer;
 }
-.articles-btn {
-    background-color: #00cbf6;
+.purchase-btn {
+  background-color: #00cbf6;
 }
 
 .options {
-    display: flex;
-    margin: 0 auto;
-    max-width: 1920px;
+  display: flex;
+  margin: 0 auto;
+  max-width: 1920px;
 }
 
 .options-item {
-    display: flex;
-    width: 480px;
-    height: 367px;
-    border-top: 7px solid;
-    font-size: 1.25rem;
-    text-transform: uppercase;
+  display: flex;
+  width: 480px;
+  height: 367px;
+  border-top: 7px solid;
+  font-size: 1.25rem;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .options-item:nth-child(odd) {
-    background-color: #1c2a33;
-    color: #18cfab;
-    border-top-color: #18cfab;
+  background-color: #1c2a33;
+  color: #18cfab;
+  border-top-color: #18cfab;
 }
 
 .options-item:nth-child(even) {
-    background-color: #18cfab;
-    color: #fff;
-    border-top-color: #fff;
+  background-color: #18cfab;
+  color: #fff;
+  border-top-color: #fff;
 }
 
 .options-item-content {
-    width: 100%;
-    margin: 50px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
+  width: 100%;
+  margin: 60px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
 
+.options-item-content-text {
+  margin: 50px 0;
+}
+
+.services-container {
+  margin: 80px auto;
+  width: 1160px;
+}
+
+.services-header {
+  text-align: center;
+  font-size: 2.25rem;
+  font-weight: 400;
+}
 
 .separator {
-    margin: 0 auto;
-    width: 88px;
-    height: 3px;
-    transform: skewX(-115deg);
-    border-top: 1px solid #18cfab;
-    border-bottom: 1px solid #18cfab;
+  margin: 10px auto;
+  width: 88px;
+  height: 3px;
+  transform: skewX(72deg);
+  border-top: 1px solid #18cfab;
+  border-bottom: 1px solid #18cfab;
+}
+
+.services-tabs-wrapper {
+  height: 235px;
+  margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #9e9e9e;
+}
+
+.services-tabs, .service-tabs-data {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
+
+.services-tabs-title {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 192px;
+  height: 73px;
+  cursor: pointer;
+  background-color: #f8fcfe;
+  border: 1px solid #f6f6f6;
+}
+
+.services-tabs-title-caret {
+  visibility: inherit;
+  position: absolute;
+  top: 53px;
+  left: 80px;
+  font-size: 3rem;
+  color: #18cfab;
+
+}
+
+.services-tabs-title.active {
+  color: white;
+  background-color: #18cfab;
+  border: 1px solid #18cfab;
+  visibility: visible;
+}
+
+.services-tabs-content {
+  display: none;
+}
+
+.services-tabs-content.open {
+  display: flex;
+  flex-direction: row;
+}
+
+.services-tabs-img {
+ width: 193px;
+ height: 140px;
+ border: 1px solid #c6c6c6;
+}
+
+.services-tabs-text {
+ display: flex;
+ margin-left: 20px;
+  margin-top: 0;
+ font-size: 0.9rem;
+  line-height: 1.5rem;
+ text-align: justify;
+}
+
+#purchase {
+  position: relative;
+  margin-top: 102px;
+  width: 100%;
+  height: 474px;
+  background-size: cover;
+  background: rgba(0, 0, 0, 0.7) url("../img/Sections background/section-2.jpg") no-repeat fixed top;
+  background-blend-mode: darken;
+}
+
+.purchase-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.purchase-header {
+  margin-top: 126px;
+  color: #18cfab;
+  font-size: 2.5rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.purchase-text {
+  margin: 0 0 75px;
+  color: #ccc;
 }
